--- a/rpc-client/pom.xml
+++ b/rpc-client/pom.xml
@@ -18,13 +18,13 @@
         </dependency>
         <!-- RPC Common -->
         <dependency>
-            <groupId>cn.itcast.rpc</groupId>
+            <groupId>cn.kidcools.rpc</groupId>
             <artifactId>rpc-common</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
         <!-- RPC Registry -->
         <dependency>
-            <groupId>cn.itcast.rpc</groupId>
+            <groupId>cn.kidcools.rpc</groupId>
             <artifactId>rpc-registry</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
