--- a/rpc-sample-server/pom.xml
+++ b/rpc-sample-server/pom.xml
@@ -19,7 +19,7 @@
         </dependency>
         <!-- RPC Sample Client -->
         <dependency>
-            <groupId>cn.itcast.rpc</groupId>
+            <groupId>cn.kidcools.rpc</groupId>
             <artifactId>rpc-sample-client</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
