--- a/rpc-server/pom.xml
+++ b/rpc-server/pom.xml
@@ -30,14 +30,14 @@
         </dependency>
         <!-- RPC Common -->
         <dependency>
-            <groupId>cn.itcast.rpc</groupId>
+            <groupId>cn.kidcools.rpc</groupId>
             <artifactId>rpc-common</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
         <!-- RPC Registry -->
         
         <dependency>
-            <groupId>cn.itcast.rpc</groupId>
+            <groupId>cn.kidcools.rpc</groupId>
             <artifactId>rpc-registry</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
