--- a/rpc-sample-app/pom.xml
+++ b/rpc-sample-app/pom.xml
@@ -25,13 +25,13 @@
         </dependency>
         <!-- RPC Client -->
         <dependency>
-            <groupId>cn.itcast.rpc</groupId>
+            <groupId>cn.kidcools.rpc</groupId>
             <artifactId>rpc-client</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
         <!-- RPC Sample Client -->
         <dependency>
-            <groupId>cn.itcast.rpc</groupId>
+            <groupId>cn.kidcools.rpc</groupId>
             <artifactId>rpc-sample-client</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
